[package]
name = "sa-indexer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
# external
async-trait = "0.1"
arc-swap = "1.4.0"
chrono = "0.4.19"
dirs = { version = "4", package = "directories" }
fdlimit = "0.2"
fern = { version = "0.6", features = ["colored"] }
flume = "0.10.8"
futures = "0.3"
hashbrown = { version = "0.12", features = ["inline-more"] }
hex = "0.4"
itertools = "0.10"
itoa = "1.0.3"
log = { version = "0.4", features = ["serde"] }
num_cpus = "1.13"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
async-std = "1.9"
futures-timer = "3"
sqlx = { version = "0.6", default-features = false, features = ["postgres", "macros", "runtime-async-std-rustls", "migrate", "json", "offline", "chrono" ] }
tempfile = "3.2.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
xtra = { version = "0.5", features = ["with-async_std-1"] }
async-stream = "0.3"
semver = "1.0"

# Parity
codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive", "full"] }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-tracing = { git ="https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-storage = { git ="https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# Workspace
sa-backend = { path = '../backend' }
sa-work-queue = { path = "../work-queue/sa-work-queue" }

[dev-dependencies]
test-common = { path = "../test-common/" }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", package = "polkadot-service" , branch = "release-v0.9.30" }
anyhow = "1"
pretty_env_logger = "0.4.0"
tempfile = "3.2"
once_cell = "1.8"
